--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -59,6 +59,7 @@ ul {
 .dark-mode {
   background-color: black;
   color: white;
+  --circle-color: #ff5733;
 }
 :root {
   --light: #fff;
